fixed overflowing when zoomed in

--- a/style.css
+++ b/style.css
@@ -340,3 +340,44 @@
         justify-content: center;
       }
     }
+
+    @media only screen and (max-height: 900px){
+   .credits{
+    position: absolute;
+    top: 500px;
+    width: 25vw;
+    height: 20px;
+    background-color: #000;
+    color: #fff;
+    opacity: .5;
+   font-size: small;
+  
+    display: flex;
+    justify-content: center;
+   }
+   .inner-text{
+    margin: 0 0 0 40px;
+    width: 20vw;
+    font-family: 'momstypewriterregular';
+    font-size: smaller;
+    color: #596D48;
+   }
+   h2{
+    font-size: small;
+   }
+   .footer > p{
+    margin: 30px 0 0 50px;
+    font-size: small;
+    font-weight: bold;
+   }
+   button{
+    margin: 30px 0 0 50px;
+    padding: 13px 23px 13px 23px;
+    border-radius: 10px;
+   
+    background-color: #596D48;
+    color: white;
+    border: none;
+    font-weight: 700;
+   }
+  }
